Remove java.naming module dependency